[package]
name = "program-satthesis"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.1.0"
# TODO: only needed to access Callbacks trait. will fix in satisfaction upstream
cadical = "0.1.15"

[dependencies.satisfaction]
git = "http://github.com/marceline-cramer/satisfaction.git"
rev = "549abd0"
features = ["cadical"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "problems"
harness = false
